scikits/odes/sundials/c_cvodes.pxd


    int CVodeGetSensNumRhsEvals(void *cvode_mem, long int *nfSevals)
    int CVodeGetNumRhsEvalsSens(void *cvode_mem, long int *nfevalsS)
    int CVodeGetSensNumErrTestFails(void *cvode_mem, long int *nSetfails)
    int CVodeGetSensNumLinSolvSetups(void *cvode_mem, long int *nlinsetupsS)
    int CVodeGetSensErrWeights(void *cvode_mem, N_Vector *eSweight)
    int CVodeGetSensStats(void *cvode_mem, long int *nfSevals,
                          long int *nfevalsS, long int *nSetfails,
                          long int *nlinsetupsS)
    int CVodeGetSensNumNonlinSolvIters(void *cvode_mem, long int *nSniters)
    int CVodeGetSensNumNonlinSolvConvFails(void *cvode_mem, long int *nSncfails)
    int CVodeGetStgrSensNumNonlinSolvIters(void *cvode_mem,
                                           long int *nSTGR1niters)
    int CVodeGetStgrSensNumNonlinSolvConvFails(void *cvode_mem,
                                               long int *nSTGR1ncfails)
    int CVodeGetSensNonlinSolvStats(void *cvode_mem, long int *nSniters,
                                    long int *nSncfails)

    void CVodeSensFree(void *cvode_mem)

    #Exported Functions -- Sensitivity dependent quadrature
    int CVodeQuadSensInit(void *cvode_mem, CVQuadSensRhsFn fQS,
                          N_Vector *yQS0)
    int CVodeQuadSensReInit(void *cvode_mem, N_Vector *yQS0)

    int CVodeQuadSensSStolerances(void *cvode_mem, sunrealtype reltolQS,
                                  sunrealtype *abstolQS)
    int CVodeQuadSensSVtolerances(void *cvode_mem, sunrealtype reltolQS,
                                  N_Vector *abstolQS)
    int CVodeQuadSensEEtolerances(void *cvode_mem)

    int CVodeSetQuadSensErrCon(void *cvode_mem, sunbooleantype errconQS)

    int CVodeGetQuadSens(void *cvode_mem, sunrealtype *tret, N_Vector *yQSout)
    int CVodeGetQuadSens1(void *cvode_mem, sunrealtype *tret, int iss,
                          N_Vector yQSout) # rename is to iss, is protected in python

    int CVodeGetQuadSensDky(void *cvode_mem, sunrealtype t, int k,
                            N_Vector *dkyQS_all)
    int CVodeGetQuadSensDky1(void *cvode_mem, sunrealtype t, int k,
                             int iss, N_Vector dkyQS) # rename is to iss, is protected in python

    int CVodeGetQuadSensNumRhsEvals(void *cvode_mem, long int *nfQSevals)
    int CVodeGetQuadSensNumErrTestFails(void *cvode_mem,
                                        long int *nQSetfails)
    int CVodeGetQuadSensErrWeights(void *cvode_mem, N_Vector *eQSweight)
    int CVodeGetQuadSensStats(void *cvode_mem, long int *nfQSevals,
                              long int *nQSetfails)

    void CVodeQuadSensFree(void *cvode_mem)

    # Exported Functions -- Backward Problems
    int CVodeAdjInit(void *cvode_mem, long int steps, int interp)
    int CVodeAdjReInit(void *cvode_mem)
    void CVodeAdjFree(void *cvode_mem)

    int CVodeCreateB(void *cvode_mem, int lmmB, int *which)
    int CVodeInitB(void *cvode_mem, int which, CVRhsFnB fB, sunrealtype tB0, 
                   N_Vector yB0)
    int CVodeInitBS(void *cvode_mem, int which, CVRhsFnBS fBs,
                    sunrealtype tB0, N_Vector yB0)
    int CVodeReInitB(void *cvode_mem, int which, sunrealtype tB0, N_Vector yB0)
    int CVodeSStolerancesB(void *cvode_mem, int which, sunrealtype reltolB,
                           sunrealtype abstolB)
    int CVodeSVtolerancesB(void *cvode_mem, int which,
                           sunrealtype reltolB, N_Vector abstolB)

    int CVodeQuadInitB(void *cvode_mem, int which,
                       CVQuadRhsFnB fQB, N_Vector yQB0)
    int CVodeQuadInitBS(void *cvode_mem, int which,
                        CVQuadRhsFnBS fQBs, N_Vector yQB0)
    int CVodeQuadReInitB(void *cvode_mem, int which, N_Vector yQB0)

    int CVodeQuadSStolerancesB(void *cvode_mem, int which,
                               sunrealtype reltolQB, sunrealtype abstolQB)
    int CVodeQuadSVtolerancesB(void *cvode_mem, int which,
                               sunrealtype reltolQB, N_Vector abstolQB)

    # Solver Function For Forward Problems 
    int CVodeF(void *cvode_mem, sunrealtype tout, N_Vector yout,
               sunrealtype *tret, int itask, int *ncheckPtr)

    # Solver Function For Backward Problems
    int CVodeB(void *cvode_mem, sunrealtype tBout, int itaskB)

    # Optional Input Functions For Adjoint Problems
    int CVodeSetAdjNoSensi(void *cvode_mem)
    
    int CVodeSetUserDataB(void *cvode_mem, int which, void *user_dataB)
    int CVodeSetMaxOrdB(void *cvode_mem, int which, int maxordB)
    int CVodeSetMaxNumStepsB(void *cvode_mem, int which, long int mxstepsB)
    int CVodeSetStabLimDetB(void *cvode_mem, int which, sunbooleantype stldetB)
    int CVodeSetInitStepB(void *cvode_mem, int which, sunrealtype hinB)
    int CVodeSetMinStepB(void *cvode_mem, int which, sunrealtype hminB)
    int CVodeSetMaxStepB(void *cvode_mem, int which, sunrealtype hmaxB)
    int CVodeSetConstraintsB(void *cvode_mem, int which, N_Vector constraintsB)
    int CVodeSetQuadErrConB(void *cvode_mem, int which, sunbooleantype errconQB)

    int CVodeSetNonlinearSolverB(void *cvode_mem, int which,
                                 SUNNonlinearSolver NLS)

    # Extraction And Dense Output Functions For Backward Problems
    int CVodeGetB(void *cvode_mem, int which, sunrealtype *tBret, N_Vector yB)
    int CVodeGetQuadB(void *cvode_mem, int which, sunrealtype *tBret, N_Vector qB)

    # Optional Output Functions For Backward Problems 
    void *CVodeGetAdjCVodeBmem(void *cvode_mem, int which)
    int CVodeGetAdjY(void *cvode_mem, sunrealtype t, N_Vector y)

    struct _CVadjCheckPointRec:
        void *my_addr
        void *next_addr
        sunrealtype t0
        sunrealtype t1
        long int nstep
        int order
        sunrealtype step

    ctypedef _CVadjCheckPointRec CVadjCheckPointRec

    int CVodeGetAdjCheckPointsInfo(void *cvode_mem, CVadjCheckPointRec *ckpnt)

    int CVodeGetAdjDataPointHermite(void *cvode_mem, int which,
                                    sunrealtype *t, N_Vector y, N_Vector yd)

    int CVodeGetAdjDataPointPolynomial(void *cvode_mem, int which,
                                       sunrealtype *t, int *order, N_Vector y)


    int CVodeGetAdjCurrentCheckPoint(void *cvode_mem, void **addr)

    
cdef extern from "cvodes/cvodes_ls.h":
    #CVDLS return values
    enum: CVLS_SUCCESS         #  0
    enum: CVLS_MEM_NULL        # -1
    enum: CVLS_LMEM_NULL       # -2
    enum: CVLS_ILL_INPUT       # -3
    enum: CVLS_MEM_FAIL        # -4
    enum: CVLS_PMEM_NULL        # -5
    enum: CVLS_JACFUNC_UNRECVR  # -6
    enum: CVLS_JACFUNC_RECVR    # -7
    enum: CVLS_SUNMAT_FAIL      # -8
    enum: CVLS_SUNLS_FAIL       # -9

    enum: CVLS_NO_ADJ           # -101
    enum: CVLS_LMEMB_NULL       # -102
    
    ctypedef int (*CVLsJacFn)(sunrealtype t, N_Vector y, N_Vector fy,
                              SUNMatrix Jac, void *user_data,
                              N_Vector tmp1, N_Vector tmp2, N_Vector tmp3) except? -1

    ctypedef int (*CVLsPrecSetupFn)(sunrealtype t, N_Vector y, N_Vector fy,
                                    sunbooleantype jok, sunbooleantype *jcurPtr,
                                    sunrealtype gamma, void *user_data) except? -1

    ctypedef int (*CVLsPrecSolveFn)(sunrealtype t, N_Vector y, N_Vector fy,
                                    N_Vector r, N_Vector z, sunrealtype gamma,
                                    sunrealtype delta, int lr, void *user_data) except? -1

    ctypedef int (*CVLsJacTimesSetupFn)(sunrealtype t, N_Vector y,
                                       N_Vector fy, void *user_data) except? -1

    ctypedef int (*CVLsJacTimesVecFn)(N_Vector v, N_Vector Jv, sunrealtype t,
                                      N_Vector y, N_Vector fy,
                                      void *user_data, N_Vector tmp) except? -1

    ctypedef int (*CVLsLinSysFn)(sunrealtype t, N_Vector y, N_Vector fy, 
                                 SUNMatrix A, sunbooleantype jok, 
                                 sunbooleantype *jcur, sunrealtype gamma,
                                 void *user_data, N_Vector tmp1, N_Vector tmp2,
                                 N_Vector tmp3)


    int CVodeSetLinearSolver(void *cvode_mem, SUNLinearSolver LS, SUNMatrix A)

    int CVodeSetJacFn(void *cvode_mem, CVLsJacFn jac)
    int CVodeSetMaxStepsBetweenJac(void *cvode_mem, long int msbj)
    int CVodeSetEpsLin(void *cvode_mem, sunrealtype eplifac)
    int CVodeSetPreconditioner(void *cvode_mem, CVLsPrecSetupFn pset,
                               CVLsPrecSolveFn psolve)
    int CVodeSetJacTimes(void *cvode_mem, CVLsJacTimesSetupFn jtsetup,
                         CVLsJacTimesVecFn jtimes)
    int CVodeSetLinSysFn(void *cvode_mem, CVLsLinSysFn linsys)

    int CVodeGetLinWorkSpace(void *cvode_mem, long int *lenrwLS,
                             long int *leniwLS)
    int CVodeGetNumJacEvals(void *cvode_mem, long int *njevals)
    int CVodeGetNumPrecEvals(void *cvode_mem, long int *npevals)
    int CVodeGetNumPrecSolves(void *cvode_mem, long int *npsolves)
    int CVodeGetNumLinIters(void *cvode_mem, long int *nliters)
    int CVodeGetNumLinConvFails(void *cvode_mem, long int *nlcfails)
    int CVodeGetNumJTSetupEvals(void *cvode_mem, long int *njtsetups)
    int CVodeGetNumJtimesEvals(void *cvode_mem, long int *njvevals)
    int CVodeGetNumLinRhsEvals(void *cvode_mem, long int *nfevalsLS)
    int CVodeGetLastLinFlag(void *cvode_mem, long int *flag)
    char *CVodeGetLinReturnFlagName(long int flag)

    #  Backward problems
    ctypedef int (*CVLsJacFnB)(sunrealtype t, N_Vector y, N_Vector yB,
                               N_Vector fyB, SUNMatrix JB,
                               void *user_dataB, N_Vector tmp1B,
                               N_Vector tmp2B, N_Vector tmp3B)

    ctypedef int (*CVLsJacFnBS)(sunrealtype t, N_Vector y, N_Vector *yS,
                                N_Vector yB, N_Vector fyB, SUNMatrix JB,
                                void *user_dataB, N_Vector tmp1B,
                                N_Vector tmp2B, N_Vector tmp3B)

    ctypedef int (*CVLsPrecSetupFnB)(sunrealtype t, N_Vector y, N_Vector yB,
                                     N_Vector fyB, sunbooleantype jokB,
                                     sunbooleantype *jcurPtrB,
                                     sunrealtype gammaB, void *user_dataB)

    ctypedef int (*CVLsPrecSetupFnBS)(sunrealtype t, N_Vector y,
                                      N_Vector *yS, N_Vector yB,
                                      N_Vector fyB, sunbooleantype jokB,
                                      sunbooleantype *jcurPtrB,
                                      sunrealtype gammaB, void *user_dataB)

    ctypedef int (*CVLsPrecSolveFnB)(sunrealtype t, N_Vector y, N_Vector yB,
                                     N_Vector fyB, N_Vector rB,
                                     N_Vector zB, sunrealtype gammaB,
                                     sunrealtype deltaB, int lrB,
                                     void *user_dataB)

    ctypedef int (*CVLsPrecSolveFnBS)(sunrealtype t, N_Vector y, N_Vector *yS,
                                      N_Vector yB, N_Vector fyB,
                                      N_Vector rB, N_Vector zB,
                                      sunrealtype gammaB, sunrealtype deltaB,
                                      int lrB, void *user_dataB)

    ctypedef int (*CVLsJacTimesSetupFnB)(sunrealtype t, N_Vector y, N_Vector yB,
                                         N_Vector fyB, void *jac_dataB)

    ctypedef int (*CVLsJacTimesSetupFnBS)(sunrealtype t, N_Vector y,
                                          N_Vector *yS, N_Vector yB,
                                          N_Vector fyB, void *jac_dataB)
